Fixed alignments, button hover effects, manage content page in Admin
- Fixed Table Alignment
- Added button hover effects
- Fixed CMS UI

--- a/src/app/components/components/table/table.component.css
+++ b/src/app/components/components/table/table.component.css
@@ -85,6 +85,7 @@ table th:last-child{
     color: #959BA5;
   }
   
+
   .bar{
     max-width: 600px;
     width: 100%;
@@ -187,6 +188,11 @@ input:checked + .custom-checkbox  {
   background: #1C92FF;
   box-shadow: 0px 0px 10px 1px #1C92FF;
   content: "-"; 
+}
+
+.add-btn:hover {
+  background: #1C92FF;
+  box-shadow: 0px 0px 10px 1px #1C92FF;
 }
 
 /* input:checked + .minus  {
